# BioSeeker

./: .gitignore  Dockerfile  FBgn0000274_FBtr0085727.DNA.afa  Pipfile  README.md  analysis.py  assembler.py  bicodon_data_ORF+1.csv  bicodon_data_ORF+2.csv  bioseeker.py  build.sh  codon_data_ORF+1.csv  codon_data_ORF+2.csv  conservationrate.py  correcciones.txt  data3_facundo.csv  data6_facundo.csv  data6_infoutil.csv  dataframes.r  delete_files.bat  delete_files.sh  historial_bicodones.csv  historial_bicodones_0.csv  historial_codones.csv  lista_de_archivos.py  listfiles.py  main.py  pruebas (1).py  pseudocodigo.txt  pyproject.toml  script_conservacion.py  seqxtract.py  unreadable.txt
.github/workflows/: python_ci.yaml
BioSeeker/core/: BioSeekerExceptions.py
BioSeeker/tools/: analysis.py  assembler.py  conservationrate.py  delete.py  listfiles.py  parser.py  seqxtract.py
BioSeeker/utils/: intro.py  (+1 more)
FASTA_files/: FBgn0000014_FBtr0083388.DNA.afa  FBgn0000028_FBtr0074015.DNA.afa
backup/: data6_facundo.csv  dataframes.r  notebook.Rmd
dataframes/: analisis.r  analisis_bicodones.csv  analisis_bicodones_V2.csv  analisis_codones.csv  data3_facundo.csv  data6_facundo.csv  data6_infoutil.csv  dataframes.r  datos_zscore.csv  historial_bicodones_1.csv  historial_codones_0.csv  historial_codones_1.csv  notebook.Rmd  notebook.md  notebook.nb.html  workspace.RData
tests/: test_analysis.py  test_conservation.py  test_rscu.py  test_statistics.py
tools/: analysis.py  assembler.py  conservationrate.py  delete.py  listfiles.py  seqxtract.py  upload_icps.py
utils/: intro.py
(+6223 files in other folders)
